--- a/Slurp/Slurp.vcxproj.filters
+++ b/Slurp/Slurp.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\Slurp\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Slurp\Log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Slurp\Application.h">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Slurp\EntryPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Slurp\Log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
