--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Slurp/vendor/GLFW"]
+	path = Slurp/vendor/GLFW
+	url = https://github.com/TheCherno/glfw.git
